--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This a new  Repo</p>
-    <p>this para is added via feature1 branch</p>
+    <p>this para is added via feature1 branch(dropdown)</p>
 </body>
 </html>
