Second feature added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>This a new  Repo</p>
     <p>this para is added via feature1 branch(dropdown)</p>
+    <P>This is second new feature</P>
 </body>
 </html>
