--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <p>This a new  Repo</p>
     <p>this para is added via feature1 branch <button>new button</button></p>
-    <p>this para is added via feature1 branch(dropdown)</p
+    <p>this para is added via feature1 branch(dropdown)</p>
 </body>
 </html>
